fixed spacing for deployment

--- a/public/style.css
+++ b/public/style.css
@@ -44,7 +44,7 @@ body {
     display: flex;
     padding-left: 2%;
     padding-top: 2%;
-    /* height: 1700px; */
+    height: 600px;
 }
 
 .menu {
@@ -88,7 +88,11 @@ and (min-device-width : 320px)
 and (max-device-width : 480px) {
 
     .logo {
-        height: auto;
+        height: 100%;
+        width: 100vw;
+        margin: auto;
+        padding-left: 5%;
+        padding-top: 0%;
     }
 
     .logo .zero {
@@ -108,12 +112,14 @@ and (max-device-width : 480px) {
     .logo .theo {
         font-family: five;
         font-size: 80pt;
-        margin-top: 595px;
-        margin-left: 10px;
+        margin-top: 500px;
+        margin-left: -25px;
     }
 
     .menu {
         flex-wrap: nowrap;
         flex-direction: column;
+        font-size: 64pt;
+        margin-top: 10%;
     }
 }
